--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "elevenlabs": "^0.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
+    "react-rnd": "^10.4.11",
     "react-scripts": "5.0.1",
     "remotion": "^4.0.167",
     "web-vitals": "^2.1.4"
